Added fixed width to collection info table.

--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -29,9 +29,9 @@
     <h1 class="jb-heading-2">Collection Information</h1>
     <table>
       <tr>
-        <th>Owner</th>
-        <th>Item type</th>
-        <th>Access level</th>
+        <th style="width:100px">Owner</th>
+        <th style="width:120px">Item type</th>
+        <th style="width:120px">Access level</th>
         <th>Description</th>
       </tr>
       <tr>
