--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -202,7 +202,7 @@
           <tbody>
             {% for q in queries %}
             <tr>
-	      <td><a href="{{ q.get_absolute_url }}">{{q.name}}</td>
+	      <td><a href="{{ q.get_GET_url }}">{{q.name}}</td>
 	      <td>{{q.description}}</td>
             </tr>
             {% endfor %}
