Fixed domain name in query link.

--- a/sled_queries/templates/sled_queries/query_link.html
+++ b/sled_queries/templates/sled_queries/query_link.html
@@ -14,8 +14,8 @@ Share query
   </p>
   
   <div class="jb-modal-field">
-    <a href="{{ request.scheme }}://{{ request.get_host }}{{ query.get_GET_url }}">
-      {{ request.get_host }}{{ query.get_GET_url }}
+    <a href="{{ link }}">
+      {{ link }}
     </a>
   </div>
 
