--- a/sled_single_objects/templates/sled_single_objects/so_cede_ownership.html
+++ b/sled_single_objects/templates/sled_single_objects/so_cede_ownership.html
@@ -13,7 +13,7 @@ Cede ownership?
   <div class="invalid jb-modal-field">
     <ul>
       {% for error in form.non_field_errors %}
-      <li>{{ error }}</li>
+      <li>{{ error|safe }}</li>
       {% endfor %}
     </ul>
   </div>
