--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -74,7 +74,7 @@
       <table class="jb-navbar-table-top">
 	<tr>
 	  <td style="width:300px;">
-	    <a href="{% url 'home:homepage' %}" class="jb-nav-brand"><img src="{% static 'images/JB_Master Header_Logo.png' %}" loading="lazy" width="248" alt=""></a>
+	    <a href="{% url 'sled_home:homepage' %}" class="jb-nav-brand"><img src="{% static 'images/JB_Master Header_Logo.png' %}" loading="lazy" width="248" alt=""></a>
 	  </td>
 	  <td style="width:50px;text-align:center">
 	    <img style="height:25px;" src="{% static 'icons/search.svg' %}" id="global_search2">
@@ -94,7 +94,7 @@
       <nav role="navigation">
 	<table class="jb-navbar-table-bottom jb-navbar">
 	  <tr>
-	    <td><a href="{% url 'home:homepage' %}">Home</a></td>
+	    <td><a href="{% url 'sled_home:homepage' %}">Home</a></td>
 	    <td><a href="{% url 'lenses:lens-index' %}">Lenses</a></td>
 	    <td><a href="{% url 'sled_groups:group-list' %}">Groups</a></td>
 	    <td><a href="{% url 'sled_collections:collections-list' %}">Collections</a></td>
