Fixed bug in displaying z_source in the lens detail page.

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -92,8 +92,8 @@
 	  <div class="sled-help-tooltip-content">{{ lens.get_z_lens_help_text|safe }}</div>
 	</th>
         <th>
-	  <div class="sled-help-tooltip">{{ lens.get_flag_confirmed_label|safe }}</div>
-	  <div class="sled-help-tooltip-content">{{ lens.get_flag_confirmed_help_text|safe }}</div>
+	  <div class="sled-help-tooltip">{{ lens.get_z_source_label|safe }}</div>
+	  <div class="sled-help-tooltip-content">{{ lens.get_z_source_help_text|safe }}</div>
 	</th>
         <th>
 	  Score
