Checked all notifications except the deletion and paper related ones, for 1 object involved at a time (i.e. not lists).

--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -150,7 +150,7 @@
 	</p>
 	{% else %}
 	<p>
-	  You are following <a href="{% url 'sled_users:user-following' %}">{{ followed_lenses|length }} lenses</a>
+	  You are following <a href="{% url 'sled_users:user-following' %}">{{ followed_lenses|length }} {{followed_lenses|length|pluralize:"Lens,Lenses"}}</a>
 	</p>	
 	<br>
 	{% if lenses_with_updates %}
