--- a/sled_data/templates/sled_data/redshift_create.html
+++ b/sled_data/templates/sled_data/redshift_create.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Add Catalogue data?
+Add Redshift?
 {% endblock title %}
 
 {% block content %}
@@ -52,6 +52,6 @@ Add Catalogue data?
 {% block action_button %}
 <button type="submit" class="jb-submit-button-1">
   <img src="{% static 'icons/plus.svg' %}" >
-  Create Catalogue data
+  Create Redshift
 </button>
 {% endblock action_button %}
