Ancient changes to api views

--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -578,7 +578,7 @@
       See collage
     </button>
 
-    <button type="button" id="export-csv" disabled class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:export-csv' %}">
+    <button type="button" id="export-csv" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:export-csv' %}">
       <img src="{% static 'icons/folder-fill.svg' %}">
       Export to csv
     </button>
